--- a/html_cheatsheet.html
+++ b/html_cheatsheet.html
@@ -10,6 +10,8 @@
     <h4> Header 4 </h4>
     <h5> Header 5 </h5>
     <h6> Header 6 </h6>
-    <br> line break
+    <br>
+    <p>line break</p>
+
 
 </html>
