--- a/beginners-week-one-master/index.html
+++ b/beginners-week-one-master/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title> Title </title>
+    <title> First Site </title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
