--- a/html_cheatsheet.html
+++ b/html_cheatsheet.html
@@ -10,8 +10,6 @@
     <h4> Header 4 </h4>
     <h5> Header 5 </h5>
     <h6> Header 6 </h6>
-    <br>
-    <p>line break</p>
-
+    <br> line break
 
 </html>
